Fixed the horizontal scrollbar problem

--- a/css/base-styles.css
+++ b/css/base-styles.css
@@ -21,10 +21,12 @@
 body { 
     background-color: #050505; 
     color: #f31616; 
+    overflow-x: hidden; 
 }   
 
 a:focus { 
     outline: 2px solid #f31616; 
+    text-decoration: none; 
 }
 
 button:focus { 
@@ -42,6 +44,9 @@ button:focus {
     width: 300px; 
     height: 100vh; 
     background-color: #f31616; 
+}
+
+.closed { 
     transform: translate(300px, 0px); 
 }
 
@@ -118,15 +123,15 @@ header li a:hover {
     background-color: #f31616; 
 }
 
-.mobile-nav { 
+.open-button { 
     color: #f31616; 
     background-color: #050505; 
-    border: #f31616; 
+    border: #1b1212; 
     display: none; 
 }
 
 @media (max-width: 768px) { 
-    .mobile-nav { 
+    .open-button { 
         display: block; 
     }
 
